--- a/_coverage/index.html
+++ b/_coverage/index.html
@@ -3,22 +3,49 @@
   <head>
     <meta charset="utf-8"/>
     <title>Coverage report</title>
-    <meta name="description" content="96.96% coverage overall"/>
+    <meta name="description" content="76.03% coverage overall"/>
     <link rel="stylesheet" type="text/css" href="coverage.css"/>
   </head>
   <body>
     <div id="header">
       <h1>Coverage report</h1>
-      <h2>96.96%</h2>
+      <h2>76.03%</h2>
     </div>
     <div id="files">
       <div>
         <span class="meter">
-          <span class="covered" style="width: 96%"></span>
+          <span class="covered" style="width: 98%"></span>
         </span>
-        <span class="percentage">96% <span class="stats">(64 / 66)</span></span>
+        <span class="percentage">98% <span class="stats">(64 / 65)</span></span>
         <a href="lib/analytics.ml.html">
           <span class="dirname">lib/</span>analytics.ml
+        </a>
+      </div>
+      <div>
+        <span class="meter">
+          <span class="covered" style="width: 72%"></span>
+        </span>
+        <span class="percentage">72% <span class="stats">(120 / 166)</span></span>
+        <a href="lib/refresh.ml.html">
+          <span class="dirname">lib/</span>refresh.ml
+        </a>
+      </div>
+      <div>
+        <span class="meter">
+          <span class="covered" style="width: 89%"></span>
+        </span>
+        <span class="percentage">89% <span class="stats">(50 / 56)</span></span>
+        <a href="lib/stock_cache.ml.html">
+          <span class="dirname">lib/</span>stock_cache.ml
+        </a>
+      </div>
+      <div>
+        <span class="meter">
+          <span class="covered" style="width: 63%"></span>
+        </span>
+        <span class="percentage">63% <span class="stats">(77 / 122)</span></span>
+        <a href="test/test_refresh.ml.html">
+          <span class="dirname">test/</span>test_refresh.ml
         </a>
       </div>
     </div>
